--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,13 +1,13 @@
 {
-    "startTime": 1522,
-    "pid": 0,
-    "runTimes": [
+    "start_time": 1607,
+    "pid": 1,
+    "run_times": [
         [0, 5, 15, 0, 15, 0, 15, 0],
         [0, 5, 10, 0, 10, 0, 10, 5],
         [0, 0, 0, 0, 0, 0, 0, 0],
         [0, 2, 5, 0, 3, 0, 2, 0],
         [0, 5, 0, 5, 7, 5, 5, 0],
-        [0, 0, 0, 0, 0, 0, 0, 0],
+        [0, 1, 0, 1, 0, 1, 0, 1],
         [0, 5, 0, 5, 0, 5, 5, 0]
     ]
 }
