--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,13 +1,15 @@
 {
-    "start_time": 1607,
+    "start_time": 2045,
     "pid": 1,
+    "man_mode": 0,
+    "man_times": [0, 0, 0, 0, 0, 0, 0, 0],
     "run_times": [
-        [0, 5, 15, 0, 15, 0, 15, 0],
+        [90, 95, 15, 90, 15, 90, 15, 90],
         [0, 5, 10, 0, 10, 0, 10, 5],
         [0, 0, 0, 0, 0, 0, 0, 0],
         [0, 2, 5, 0, 3, 0, 2, 0],
         [0, 5, 0, 5, 7, 5, 5, 0],
-        [0, 1, 0, 1, 0, 1, 0, 1],
+        [5, 0, 1, 0, 1, 0, 1, 0],
         [0, 5, 0, 5, 0, 5, 5, 0]
     ]
 }
