--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,14 +1,15 @@
 {
-    "start_time": 1847,
+    "start_time": 600,
     "pid": 0,
+    "alpha": 0.075,
     "man_times": [0, 0, 0, 0, 0, 0, 0, 0],
     "run_times": [
-        [0, 0, 1, 0, 0, 0, 1,  0],
-        [0,  5, 5,  5, 5,  5, 5,  5],
+        [0, 10, 15,  0,  0, 15, 15, 10],
+        [0,  0,  0,  0, 45,  0,  0,  0],
+        [0, 10, 15,  0,  0, 15, 15, 10],
         [0,  0,  0,  0,  0,  0,  0,  0],
-        [0,  2,  5,  0,  3,  0,  2,  0],
-        [0,  5,  0,  5,  7,  5,  5,  0],
-        [0,  0,  1,  0,  1,  0,  1,  0],
-        [0,  0,  1,  0,  0,  1,  1,  0]
+        [0, 10,  0,  0,  0, 15, 15,  5],
+        [0,  0, 15,  0, 45,  0,  0,  0],
+        [0, 10,  0,  5,  0,  5,  5,  0]
     ]
 }
