--- a/irrigation.conf
+++ b/irrigation.conf
@@ -2,6 +2,7 @@
     "start_time": 600,
     "pid": 0,
     "alpha": 0.075,
+    "log_level": "DEBUG",
     "man_times": [0, 0, 0, 0, 0, 0, 0, 0],
     "run_times": [
         [0, 10, 15,  0,  0, 15, 15, 10],
