--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,16 +1,1 @@
-{
-    "start_time": 600,
-    "pid": 0,
-    "alpha": 0.075,
-    "log_level": "DEBUG",
-    "man_times": [0, 0, 0, 0, 0, 0, 0, 0],
-    "run_times": [
-        [0, 10, 15,  0,  0, 15, 15, 10],
-        [10, 10,  10,  0, 45,  10, 10, 10],
-        [0, 10, 15,  0,  0, 15, 15, 10],
-        [10,  0,  0,  0,  0,  0,  0,  0],
-        [5, 5,  0,  0,  0, 15, 0,  5],
-        [0,  0, 15,  0, 45,  0,  0,  0],
-        [0, 10,  0,  5,  0,  5,  5,  0]
-    ]
-}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 15, 15, 0, 0, 15, 0, 0], [0, 10, 0, 0, 45, 0, 15, 15], [0, 0, 15, 0, 0, 15, 0, 0], [0, 15, 0, 0, 0, 0, 15, 15], [0, 0, 15, 0, 45, 15, 0, 0], [0, 15, 0, 0, 5, 15, 15, 15], [0, 7, 15, 0, 6, 0, 0, 0]]}
