--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,1 +1,8 @@
-{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 15, 20, 3, 0, 15, 0, 0], [0, 10, 0, 3, 55, 0, 15, 15], [0, 10, 20, 3, 0, 5, 10, 10], [0, 15, 0, 3, 0, 0, 15, 15], [0, 15, 15, 3, 55, 15, 0, 0], [0, 15, 0, 3, 0, 15, 15, 15], [0, 15, 15, 3, 0, 0, 0, 10]]}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [
+    [0, 20, 0,  3,  0, 15,  0,  0], 
+    [0, 10, 20, 3, 55,  0, 15, 20], 
+    [0, 20, 0,  3,  0, 10,  0,  0], 
+    [0, 15, 20, 3,  0,  0, 15, 20], 
+    [0, 20, 0,  3, 55, 15,  0,  0], 
+    [0, 15, 20, 3,  0, 15, 15, 20], 
+    [0, 20, 20, 3,  0,  0,  0,  0]]}
