--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,8 +1,1 @@
-{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "INFO", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [
-    [0, 20, 0,  3,  0, 15,  0,  0], 
-    [0, 10, 20, 3, 55,  0, 15, 15], 
-    [0, 20, 0,  3,  0, 10,  0,  0], 
-    [0, 15, 20, 3,  0,  0, 15, 15], 
-    [0, 20, 0,  3, 55, 15,  0,  0], 
-    [0, 15, 20, 3,  0, 15, 15, 15], 
-    [0, 20, 20, 3,  0,  0,  0,  0]]}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "INFO", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 20, 15, 0, 0, 15, 0, 0], [0, 10, 0, 0, 55, 0, 15, 15], [0, 0, 15, 0, 0, 10, 5, 10], [0, 20, 0, 0, 0, 0, 15, 15], [0, 0, 15, 0, 55, 15, 0, 0], [0, 20, 0, 0, 0, 15, 15, 15], [0, 20, 15, 0, 0, 0, 0, 0]]}
