--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,1 +1,98 @@
-{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 10, 0, 1, 20, 5, 0, 5], [0, 5, 10, 1, 1, 0, 5, 0], [0, 10, 0, 1, 0, 5, 0, 5], [0, 5, 10, 1, 20, 0, 5, 0], [0, 0, 0, 1, 0, 5, 0, 5], [0, 15, 10, 1, 0, 0, 5, 0], [0, 0, 0, 1, 0, 5, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0]]}
+{
+    "start_time":900,
+    "pid": 0,
+    "alpha": 0.075,
+    "log_level": "DEBUG",
+    "man_times": [
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0
+    ],
+    "run_times": [
+        [
+            0,
+            30,
+            20,
+            2,
+            0,
+            20,
+            20,
+            15
+        ],
+        [
+            0,
+            25,
+            25,
+            2,
+            65,
+            10,
+            25,
+            0
+        ],
+        [
+            0,
+            25,
+            25,
+            1,
+            0,
+            10,
+            10,
+            20
+        ],
+        [
+            0,
+            25,
+            25,
+            2,
+            0,
+            0,
+            25,
+            0
+        ],
+        [
+            0,
+            5,
+            15,
+            2,
+            45,
+            10,
+            10,
+            15
+        ],
+        [
+            0,
+            25,
+            25,
+            1,
+            0,
+            0,
+            25,
+            0
+        ],
+        [
+            0,
+            25,
+            25,
+            2,
+            0,
+            15,
+            20,
+            20
+        ],
+        [
+            0,
+            0,
+            0,
+            0,
+            0,
+            0,
+            0,
+            0
+        ]
+    ]
+}
