--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,98 +1,1 @@
-{
-    "start_time":900,
-    "pid": 0,
-    "alpha": 0.075,
-    "log_level": "DEBUG",
-    "man_times": [
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0
-    ],
-    "run_times": [
-        [
-            0,
-            10,
-            5,
-            0,
-            0,
-            10,
-             0,
-             5
-        ],
-        [
-            0,
-            0,
-            0,
-            1,
-            0,
-            0,
-            10,
-            0
-        ],
-        [
-            0,
-            10,
-            10,
-            1,
-            0,
-            10,
-             0,
-            10
-        ],
-        [
-            0,
-            0,
-            10,
-            1,
-            0,
-            0,
-            0,
-            0
-        ],
-        [
-            0,
-            10,
-            0,
-            0,
-            0,
-            5,
-            0,
-            10
-        ],
-        [
-            0,
-            0,
-            10,
-            1,
-            0,
-            0,
-            10,
-            0
-        ],
-        [
-            0,
-            0,
-            0,
-            1,
-            20,
-            5,
-             0,
-            10
-        ],
-        [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    ]
-}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG   ", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 0, 14, 1, 0, 10, 0, 0], [0, 10, 5, 1, 0, 0, 10, 15], [0, 0, 15, 1, 0, 10, 0, 0], [0, 0, 10, 1, 0, 0, 15, 0], [0, 5, 0, 1, 0, 15, 0, 0], [0, 0, 15, 0, 0, 10, 10, 0], [0, 5, 10, 1, 20, 10, 20, 15], [0, 0, 0, 0, 0, 2, 0, 0]]}
