--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,1 +1,98 @@
-{"start_time": 900, "pid": 0, "alpha": 0.075, "log_level": "DEBUG   ", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 15, 0, 1, 0, 15, 0, 0], [0, 0, 15, 0, 50, 0, 10, 10], [0, 15, 0, 1, 0, 10, 0, 0], [0, 0, 15, 1, 0, 0, 5, 0], [0, 15, 0, 1, 40, 15, 0, 0], [0, 0, 15, 0, 0, 10, 10, 10], [0, 15, 10, 1, 20, 10, 10, 20], [0, 0, 0, 0, 1, 0, 0, 0]]}
+{
+    "start_time": 200,
+    "pid": 0,
+    "alpha": 0.075,
+    "log_level": "DEBUG   ",
+    "man_times": [
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0,
+        0
+    ],
+    "run_times": [
+        [
+            0,
+            11,
+            12,
+            13,
+            14,
+            15,
+            16,
+            17
+        ],
+        [
+            0,
+            21,
+            22,
+            23,
+            24,
+            25,
+            26,
+            27
+        ],
+        [
+            0,
+            31,
+            32,
+            33,
+            34,
+            35,
+            36,
+            37
+        ],
+        [
+            0,
+            41,
+            42,
+            43,
+            44,
+            45,
+            46,
+            47
+        ],
+        [
+            0,
+            51,
+            52,
+            53,
+            54,
+            55,
+            56,
+            57
+        ],
+        [
+            0,
+            61,
+            62,
+            63,
+            64,
+            65,
+            66,
+            67
+        ],
+        [
+            0,
+            71,
+            72,
+            73,
+            74,
+            75,
+            76,
+            77
+        ],
+        [
+            0,
+            0,
+            0,
+            0,
+            0,
+            0,
+            0,
+            0
+        ]
+    ]
+}
