--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,98 +1,1 @@
-{
-    "start_time": 600,
-    "pid": 0,
-    "alpha": 0.075,
-    "log_level": "DEBUG   ",
-    "man_times": [
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0,
-        0
-    ],
-    "run_times": [
-        [
-            0,
-            81,
-            82,
-            83,
-            84,
-            85,
-            86,
-            87
-        ],
-        [
-            0,
-            21,
-            22,
-            23,
-            24,
-            25,
-            26,
-            27
-        ],
-        [
-            0,
-            31,
-            32,
-            33,
-            34,
-            35,
-            36,
-            37
-        ],
-        [
-            0,
-            41,
-            42,
-            43,
-            44,
-            45,
-            46,
-            47
-        ],
-        [
-            0,
-            51,
-            52,
-            53,
-            54,
-            55,
-            56,
-            57
-        ],
-        [
-            0,
-            61,
-            62,
-            63,
-            64,
-            65,
-            66,
-            67
-        ],
-        [
-            0,
-            71,
-            72,
-            73,
-            74,
-            75,
-            76,
-            77
-        ],
-        [
-            0,
-            0,
-            0,
-            0,
-            0,
-            0,
-            0,
-            0
-        ]
-    ]
-}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG   ", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 81, 82, 83, 84, 85, 86, 87], [0, 21, 22, 23, 24, 25, 26, 27], [0, 31, 32, 33, 34, 35, 36, 37], [0, 41, 42, 43, 44, 45, 46, 47], [0, 51, 52, 53, 54, 55, 56, 57], [0, 61, 62, 63, 64, 65, 66, 67], [0, 71, 72, 73, 74, 75, 76, 77], [0, 0, 0, 0, 0, 0, 0, 0]]}
