--- a/irrigation.conf
+++ b/irrigation.conf
@@ -1,12 +1,1 @@
-{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "DEBUG   ", 
-"man_times": [0, 0, 0, 0, 0, 0, 0, 0], 
-"run_times": [
-[0, 15,  0,  1,  0,  0,  5,  0], 
-[0,  0, 10,  1,  0, 15,  0, 15], 
-[0, 20, 10,  1,  0,  0, 10,  0], 
-[0,  0, 15,  1,  0, 15,  0,  0], 
-[0, 20,  0,  1,  0,  0,  0,  0], 
-[0,  0,  0,  1,  0, 10,  0, 20], 
-[0, 20, 15,  1, 30,  0, 10,  0], 
-[0,  0,  0,  0,  0,  0,  0,  0]
-]}
+{"start_time": 600, "pid": 0, "alpha": 0.075, "log_level": "INFO", "man_times": [0, 0, 0, 0, 0, 0, 0, 0], "run_times": [[0, 15, 0, 1, 0, 0, 5, 0], [0, 0, 10, 1, 0, 15, 0, 10], [0, 20, 10, 1, 0, 0, 10, 0], [0, 0, 15, 1, 0, 15, 0, 0], [0, 20, 0, 1, 0, 0, 0, 0], [0, 0, 0, 1, 0, 10, 0, 15], [0, 20, 15, 1, 10, 0, 10, 0], [0, 0, 0, 0, 0, 0, 0, 0]]}
